--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run test"
+      "pre-push": "npm run test --watchAll=false"
     }
   },
   "devDependencies": {
