--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "ts-jest": "^27.0.5",
     "typescript": "^4.1.2",
@@ -44,6 +45,7 @@
     }
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
     "eslint": "^7.32.0",
     "husky": "4"
   }
